--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,11 @@ import Page from "@/src/layouts/Page.astro"
 <Page class="max-w-7xl">
 
 	<div class="space-y-4">
-		<h1 class="text-8xl mb-12">Sangwu Lee</h1>
+		<h1 class="text-4xl md:text-8xl mb-12">Sangwu Lee</h1>
 		<div class="font-serif space-y-20">
 			<div id="abstract">
-				<h2 class="text-4xl mb-4">Abstract</h2>
-				<div class="text-3xl my-2">
+				<h2 class="md:text-4xl mb-4">Abstract</h2>
+				<div class="md:text-3xl my-2">
 					<p class="leading-normal">
 						Hi, I teach machines to draw pretty pictures.
 					</p>
@@ -17,8 +17,8 @@ import Page from "@/src/layouts/Page.astro"
 			</div>
 
 			<div id="introduction">
-				<h3 class="text-3xl mb-4">Introduction</h3>
-				<div class="text-2xl my-2">
+				<h3 class="md:text-3xl mb-4">Introduction</h3>
+				<div class="md:text-2xl my-2">
 					<p class="leading-normal">
 						I've been playing around with computers for a while. 
 						I've played with a lot of different things ranging from <a href="https://lenia.netlify.app/">frontend</a>, <a href="https://www.oleve.co/">infra, backend engineering</a>, ..., but my current focus is <a href="/devlog/rambling">ML</a>.
@@ -38,8 +38,8 @@ import Page from "@/src/layouts/Page.astro"
 			</div>
 
 			<div id="background">
-				<h3 class="text-3xl mb-4">Background</h3>
-				<div class="text-2xl my-2">
+				<h3 class="md:text-3xl mb-4">Background</h3>
+				<div class="md:text-2xl my-2">
 					<p class="leading-normal">
 						I grew up in South Korea, Netherlands, and New Mexico. 
 						I learned C when I was 11, but was quickly disappointed that it wasn't a good language for making visual mediums.
@@ -69,16 +69,16 @@ import Page from "@/src/layouts/Page.astro"
 			</div>
 
 			<div id="appendix">
-				<h3 class="text-2xl mb-4">Appendix</h3>
-				<div class="text-xl my-2">
+				<h3 class="md:text-2xl mb-4">Appendix</h3>
+				<div class="md:text-xl my-2">
 					<p> - The first neural network I've ever trained was a restricted Boltzmann machine.</p>
 					<p> - From 2016 - 2024, I mostly lived in a dorm room and barracks.</p>
 					<p> - I learned C with <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=8016119&ptid=5">this lovely book.</a></p>
 					<p> - Yes, I'm Korean.</p>
 					<p> - Yes, I've already finished my military service.</p>
 					<p> - I went to a strange school called UWC-USA in Las Vegas, New Mexico.</p>
-					<p> - I'm love <a href="https://github.com/jax-ml/jax">JAX</a>. I've used it train <a href="https://github.com/RE-N-Y/scratchpad">StyleGAN, ViT-VQGAN, EDM, and MaskGiT models on TPUv3 cluster</a></p>
-					<p> - This site is built using <a href="https://astro.build/">Astro</a></p>
+					<p> - I'm love <a href="https://github.com/jax-ml/jax">JAX</a>. I've used it train <a href="https://github.com/RE-N-Y/scratchpad">StyleGAN, ViT-VQGAN, EDM, and MaskGiT models on TPUv3 cluster</a>.</p>
+					<p> - This site is built using <a href="https://astro.build/">Astro</a>.</p>
 				</div>
 			</div>
 		</div>
