--- a/src/pages/rambling/index.astro
+++ b/src/pages/rambling/index.astro
@@ -18,7 +18,9 @@ const posts = (await getCollection("rambling")).sort((a, b) => b.data.pubDate.va
 							<a href={`/devlog/rambling/${post.slug}/`}>{post.data.title}</a>
 						</h1>
 						<p class="mb-4 font-serif text-xl">{post.data.description}</p>
-						{post.data.heroImage && <Image src={post.data.heroImage} class="w-full" alt="hero" />}
+						<div class="center">
+							{post.data.heroImage && <Image src={post.data.heroImage} class="w-full md:w-auto" alt="hero" />}
+						</div>
 					</div>
 				))
 			}
