make mihai happy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,8 @@ import Page from "@/src/layouts/Page.astro"
 					</p>
 
 					<p class="leading-normal">
-						Currently, I'm a founding engineer at <a href="https://oleve.co">Oleve</a> where I helped scale <a href="https://quizard.ai/">two</a> consumer <a href="https://unstuckstudy.com/">products</a> from zero to a few million users in less than a year.
-						In my free time, I collaborate with <a href="https://krea.ai">krea.ai</a> focusing on posttraining diffusion models and SAE research.
+						Currently, I'm working at <a href="krea.ai">krea.ai</a> where I teach machines to draw pretty pictures.
+						Previsouly, I was founding engineer at <a href="https://oleve.co">Oleve</a> where I helped scale <a href="https://quizard.ai/">two</a> consumer <a href="https://unstuckstudy.com/">products</a> from zero to a few million users in less than a year.
 					</p>
 				</div>
 			</div>
