--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,56 +16,14 @@ import Page from "@/src/layouts/Page.astro"
 				</div>
 			</div>
 
-			<div id="introduction">
-				<h3 class="md:text-3xl mb-4">Introduction</h3>
-				<div class="md:text-2xl my-2">
-					<p class="leading-normal">
-						I've been playing around with computers for a while. 
-						I've played with a lot of different things ranging from <a href="https://lenia.netlify.app/">frontend</a>, <a href="https://www.oleve.co/">infra, backend engineering</a>, ..., but my current focus is <a href="/devlog/rambling">ML</a>.
-						My research is on <a href="https://krea.ai">image/video generation and creative interfaces</a>. 
-					</p>
-
-					<p class="leading-normal">
-						I spent last few years training various image generation models ranging from GAN, VQVAE, AR, and Diffusion models.
-						Nowadays, I've especially interested in <a href="https://github.com/RE-N-Y/imscore">diffusion model postraining</a>, applying <a href="/devlog/rambling/sae">SAEs</a> on image models, <a href="/devlog/rambling/vqgan">AR models, and image tokenizers</a>.
-					</p>
-
-					<p class="leading-normal">
-						Prior to devoting my time to image generation, I worked on <a href="https://scholar.google.com/citations?user=FBJeGpAAAAAJ&hl=en&authuser=2">multimodal learning research</a> with CMU LTI.
-						I've also done a fair amount of <a href="ROC-HCI">medical AI research with ROC HCI lab</a>.
-					</p>
-				</div>
-			</div>
-
 			<div id="background">
 				<h3 class="md:text-3xl mb-4">Background</h3>
 				<div class="md:text-2xl my-2">
 					<p class="leading-normal">
-						I grew up in South Korea, Netherlands, and New Mexico. 
-						I learned C when I was 11, but was quickly disappointed that it wasn't a good language for making visual mediums.
-						Fortunately, I found my way around web development and had a lot of fun building <a href="https://github.com/RE-N-Y/old-memories">static sites using HTML, CSS, and JQuery</a>.
-					</p>
-
-					<p class="leading-normal">
-						During early years of high school, I experimented with React, Angular, Laravel, Wordpress, Ruby on Rails, and Meteor.js.
-						But, when I learned about Netflix Prize, Kaggle, and AlphaGo, I quickly shifted my focus on ML. 
-					</p>
-
-					<p class="leading-normal">
-						I recently finished my undergraduate degree in CS and Mathematics from University of Rochester.
-						Apart from academic ML research, I spent a lot of time studying mathematics especially in real analysis.
-						I wish I had more time to study fourier analysis and probability theory. I'm trying to teach it to myself when I can find time.
-					</p>
-
-					<p class="leading-normal">
-						Currently, I'm working at <a href="krea.ai">krea.ai</a> where I teach machines to draw pretty pictures.
-						Previsouly, I was founding engineer at <a href="https://oleve.co">Oleve</a> where I helped scale <a href="https://quizard.ai/">two</a> consumer <a href="https://unstuckstudy.com/">products</a> from zero to a few million users in less than a year.
+						Currently, I'm working at <a href="krea.ai">krea</a> where I teach machines to draw pretty pictures.
+						Previsouly, I was founding engineer at <a href="https://oleve.co">Oleve</a> where I helped scale consumer products.
 					</p>
 				</div>
-			</div>
-
-			<div id="methods">
-
 			</div>
 
 			<div id="appendix">
