--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,47 +1,19 @@
 ---
-import Page from "@/src/layouts/Page.astro"
+import HomePage from "@/src/layouts/HomePage.astro"
 ---
 
-<Page class="max-w-7xl">
+<HomePage class="flex flex-col">
 
-	<div class="space-y-4">
-		<h1 class="text-4xl md:text-8xl mb-12">Sangwu Lee</h1>
-		<div class="font-serif space-y-20">
-			<div id="abstract">
-				<h2 class="md:text-4xl mb-4">Abstract</h2>
-				<div class="md:text-3xl my-2">
-					<p class="leading-normal">
-						Hi, I teach machines to draw pretty pictures.
-					</p>
-				</div>
-			</div>
-
-			<div id="background">
-				<h3 class="md:text-3xl mb-4">Background</h3>
-				<div class="md:text-2xl my-2">
-					<p class="leading-normal">
-						Currently, I'm working at <a href="krea.ai">krea</a> where I teach machines to draw pretty pictures.
-						Previsouly, I was founding engineer at <a href="https://oleve.co">Oleve</a> where I helped scale consumer products.
-					</p>
-				</div>
-			</div>
-
-			<div id="appendix">
-				<h3 class="md:text-2xl mb-4">Appendix</h3>
-				<div class="md:text-xl my-2">
-					<p> - The first neural network I've ever trained was a restricted Boltzmann machine.</p>
-					<p> - From 2016 - 2024, I mostly lived in a dorm room and barracks.</p>
-					<p> - I learned C with <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=8016119&ptid=5">this lovely book.</a></p>
-					<p> - Yes, I'm Korean.</p>
-					<p> - Yes, I've already finished my military service.</p>
-					<p> - I went to a strange school called UWC-USA in Las Vegas, New Mexico.</p>
-					<p> - I'm love <a href="https://github.com/jax-ml/jax">JAX</a>. I've used it train <a href="https://github.com/RE-N-Y/scratchpad">StyleGAN, ViT-VQGAN, EDM, and MaskGiT models on TPUv3 cluster</a>.</p>
-					<p> - This site is built using <a href="https://astro.build/">Astro</a>.</p>
-				</div>
-			</div>
-		</div>
-		
-
+	<div class="flex-1 flex flex-col justify-start items-start p-8 space-y-4">
+		<h1 class="text-white">SANGWU LEE</h1>
+		<h2>I TEACH MACHINES TO DRAW PRETTY PICTURES.</h2>
 	</div>
+	
+	<nav class="flex justify-start space-x-8 pb-12 pl-8">
+		<a class="bungee no-underline" href="/">HOME</a>
+		<a class="bungee no-underline" href="/projects">PROJECTS</a>
+		<a class="bungee no-underline" href="/rambling">RAMBLING</a>
+		<a class="bungee no-underline" href="/about">ABOUT ME</a>
+	</nav>
 
-</Page>
+</HomePage>
