--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -9,6 +9,6 @@ const { pathname } = Astro.url;
 const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 ---
 
-<a href={href} class="text-gray-500" class:list={[className, { active: isActive }]} {...props}>
+<a href={href} class="text-gray-500 bungee no-underline text-shadow" class:list={[className, { active: isActive }]} {...props}>
 	<slot />
 </a>
