--- a/src/pages/rambling/[...slug].astro
+++ b/src/pages/rambling/[...slug].astro
@@ -1,6 +1,6 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content"
-import Post from "../../layouts/Post.astro"
+import { type CollectionEntry, getCollection } from "astro:content"
+import RamblingPage from "../../layouts/RamblingPage.astro"
 
 export async function getStaticPaths() {
 	const posts = await getCollection("rambling")
@@ -15,7 +15,9 @@ const post = Astro.props
 const { Content } = await post.render()
 ---
 
-<Post {...post.data}>
-	<h1>{post.data.title}</h1>
-	<Content />
-</Post>
+<RamblingPage {...post.data}>
+	<div class="container mx-auto max-w-5xl px-4">
+		<h1>{post.data.title}</h1>
+		<Content />
+	</div>
+</RamblingPage>
