--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import HomePage from "@/src/layouts/HomePage.astro"
 	</div>
 	
 	<nav class="flex justify-start space-x-8 pb-12 pl-8">
-		<a class="bungee no-underline" href="/">HOME</a>
-		<a class="bungee no-underline" href="/projects">PROJECTS</a>
-		<a class="bungee no-underline" href="/rambling">RAMBLING</a>
-		<a class="bungee no-underline" href="/about">ABOUT ME</a>
+		<a class="bungee no-underline text-border" href="/devlog/">HOME</a>
+		<a class="bungee no-underline text-border" href="/devlog/projects">PROJECTS</a>
+		<a class="bungee no-underline text-border" href="/devlog/rambling">RAMBLING</a>
+		<!-- <a class="bungee no-underline text-border" href="/devlog/about">ABOUT ME</a> -->
 	</nav>
 
 </HomePage>
