--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,6 +5,6 @@ const _class = Astro.props.class
 ---
 
 
-<div class={clsx("p-4 shadow", _class)}>
+<div class={clsx("p-4 shadow-sm", _class)}>
     <slot/>
 </div>
