--- a/src/layouts/RamblingPage.astro
+++ b/src/layouts/RamblingPage.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css'
 import BaseHead from "@/src/components/BaseHead.astro"
 import { SITE_TITLE, SITE_DESCRIPTION, PREVIEW_IMAGE } from "@/src/consts"
 import Header from "@/src/components/Header.astro"
@@ -13,10 +14,17 @@ const _class = Astro.props.class
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} image={PREVIEW_IMAGE} />
 	</head>
-	<body class={clsx("min-h-screen bg-paper", _class)}>
-		<header>
-			<Header title={SITE_TITLE} />
-		</header>
-		<slot />
+	<body class={clsx("min-h-screen bg-white relative", _class)}>
+		<svg class="fixed inset-0 w-full h-full pointer-events-none" style="z-index: -1; mix-blend-mode: overlay; opacity: 0.6;" xmlns="http://www.w3.org/2000/svg">
+			<filter id="grainy">
+				<feTurbulence type="fractalNoise" baseFrequency="0.85" numOctaves="5" stitchTiles="stitch" />
+			</filter>
+			<rect width="100%" height="100%" filter="url(#grainy)" />
+		</svg>
+		<Header class="text-text" title={SITE_TITLE} />
+		<div class="py-24">
+			<slot />
+		</div>
+		<div class="fixed inset-0 bg-paper pointer-events-none" style="z-index: 9998; mix-blend-mode: multiply; opacity: 0.25;"></div>
 	</body>
 </html>
