--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "@/src/layouts/Page.astro"
+import ProjectsPage from "@/src/layouts/ProjectsPage.astro"
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import { Krea } from "@/src/blocks/krea.tsx"
@@ -13,105 +13,143 @@ import flower36 from "@/src/images/projects/sae/flower-36.png"
 import flowergif from "@/src/content/rambling/images/steering/flower.gif"
 import lenia from "@/src/images/projects/lenia/cells.png"
 import anime from "@/src/images/projects/anime/muse.png"
+import redchibi from "@/src/images/projects/chibi/red.png"
+import silverchibi from "@/src/images/projects/chibi/silver.png"
+import sleepychibi from "@/src/images/projects/chibi/sleepy.png"
 
 const images = import.meta.glob<{ default: ImageMetadata }>('/src/images/projects/krea/*.{jpeg,jpg,png,gif}');
-const paths = Object.keys(images);
+// half and half
+const first = Object.keys(images).slice(0, Math.floor(Object.keys(images).length / 2));
+const second = Object.keys(images).slice(Math.floor(Object.keys(images).length / 2));
+const full = Object.keys(images);
 ---
 
-<Page class="flex flex-col h-dvh">
-	<!-- <main class="h-dvh px-4 flex flex-col flex-1">
-		<div class="flex-1">
-			<div class="w-full h-full center">
-				<Krea client:only="react">
-					{paths.map((path) => {
-						const image = images[path];
-						return (
-							<div class="mx-2 hover:scale-105 cursor-pointer duration-300 ease-in-out shadow shadow-white/20">
-								<Image src={image()} alt="" class="h-64 w-auto object-cover" draggable={false} />
-							</div>
-						);
-					})}
-				</Krea>
+<ProjectsPage class="flex flex-col">
+	<main class="min-h-dvh px-4 flex flex-col flex-1">
+		<div class="flex flex-col flex-1">
+			<div class="w-full h-full center flex-1">
+				<div class="w-full relative justify-center items-center overflow-hidden hidden lg:block">
+					<Krea client:only="react" direction="left" baseVelocity={2}>
+						{first.map((path) => {
+							const image = images[path];
+							return (
+								<div class="mx-2 hover:scale-105 cursor-pointer duration-300 ease-in-out shadow-sm shadow-white/20">
+									<Image src={image()} alt="" class="h-64 w-auto object-cover" draggable={false} />
+								</div>
+							);
+						})}
+					</Krea>
+					<Krea client:only="react" direction="right" baseVelocity={1}>
+						{second.map((path) => {
+							const image = images[path];
+							return (
+								<div class="mx-2 hover:scale-105 cursor-pointer duration-300 ease-in-out shadow-sm shadow-white/20">
+									<Image src={image()} alt="" class="h-64 w-auto object-cover" draggable={false} />
+								</div>
+							);
+						})}
+					</Krea>
+				</div>
+
+				<div class="w-full relative justify-center items-center overflow-hidden lg:hidden">
+					<Krea client:only="react" direction="left" baseVelocity={2}>
+						{full.map((path) => {
+							const image = images[path];
+							return (
+								<div class="mx-2 hover:scale-105 cursor-pointer duration-300 ease-in-out shadow-sm shadow-white/20">
+									<Image src={image()} alt="" class="h-72 w-auto object-cover" draggable={false} />
+								</div>
+							);
+						})}
+					</Krea>
+				</div>
 			</div>
 		</div>
 		<div>
 			<div class="h-full flex items-end">
-				<div class="m-12 w-full flex justify-between">
+				<div class="w-full flex flex-col justify-between lg:m-12 lg:flex-row">
 					<div>
 						<h1 class="mb-2">KREA 1</h1>
 						<h2>MY FIRST IMAGE MODEL</h2>
 					</div>
 					
-					<div class="flex relative items-center flex-col">
+					<div class="flex flex-col relative my-12 lg:my-0">
 						<div class="w-32 h-32 overflow-hidden z-10 mb-[-24px]">
-							<img src="/devlog/chibi.png" alt="chibi" class="object-cover" />
+							<Image src={redchibi} alt="chibi" class="object-cover" />
 						</div>
-						<button class="border-2 border-white px-12 py-4 text-4xl rounded font-bold hover:bg-white hover:text-black transition-colors bungee">
-							READ
+						<button class="border-2 border-white px-12 py-4 text-2xl lg:text-4xl rounded-sm font-bold hover:bg-white hover:text-black transition-colors bungee">
+							<a href="https://www.krea.ai/blog/flux-krea-open-source-release">
+								READ
+							</a>
 						</button>
 					</div>
 				</div>
 			</div>
 		</div>
-	</main> -->
-
-	<!-- <main class="h-dvh px-4 flex flex-col flex-1 container mx-auto">
-		<div class="flex-1 center">
-			<div class="grid grid-cols-4 gap-4">
-				<div>
-					<Image src={flowergif} alt="" class="h-32 w-auto object-cover" draggable={false} />
+	</main>
+	<div class="bg-blue">
+		<main class="min-h-dvh px-4 flex flex-col flex-1 container mx-auto ">
+			<div class="flex-1 center">
+				<div class="lg:hidden text-center">
+					<Image src={flowergif} alt="" class="h-48 w-auto object-cover" draggable={false} />
+					<p class="font-mono text-md">Woman -> Flowers</p>
 				</div>
-				<div>
-					<Image src={bun12} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Hairbun + 12</p>
-				</div>
-				<div>
-					<Image src={bun24} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Hairbun + 24</p>
-				</div>
-				<div>
-					<Image src={bun36} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Hairbun + 36</p>
-				</div>
-				<div>
-					<Image src={base} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Base + 0</p>
-				</div>
-				<div>
-					<Image src={flower12} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Flower + 12</p>
-				</div>
-				<div>
-					<Image src={flower24} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Flower + 24</p>
-				</div>
-				<div>
-					<Image src={flower36} alt="" class="h-32 w-auto object-cover" draggable={false} />
-					<p class="font-mono text-md">Flower + 36</p>
-				</div>
-			</div>
-		</div>
-		<div>
-			<div class="h-full flex items-end">
-				<div class="m-12 w-full flex justify-between">
+				<div class="grid-cols-4 gap-4 hidden lg:grid">
 					<div>
-						<h1 class="mb-2">SAE</h1>
-						<h2>APPLYING sparse autoencoders on images</h2>
+						<Image src={flowergif} alt="" class="h-32 w-auto object-cover" draggable={false} />
 					</div>
-					
-					<div class="flex relative items-center flex-col">
-						<div class="w-32 h-32 overflow-hidden z-10 mb-[-24px]">
-							<img src="/devlog/chibi.png" alt="chibi" class="object-cover" />
-						</div>
-						<button class="border-2 border-white px-12 py-4 text-4xl rounded font-bold hover:bg-white hover:text-black transition-colors bungee">
-							READ
-						</button>
+					<div>
+						<Image src={bun12} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Hairbun + 12</p>
+					</div>
+					<div>
+						<Image src={bun24} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Hairbun + 24</p>
+					</div>
+					<div>
+						<Image src={bun36} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Hairbun + 36</p>
+					</div>
+					<div>
+						<Image src={base} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Base + 0</p>
+					</div>
+					<div>
+						<Image src={flower12} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Flower + 12</p>
+					</div>
+					<div>
+						<Image src={flower24} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Flower + 24</p>
+					</div>
+					<div>
+						<Image src={flower36} alt="" class="h-32 w-auto object-cover" draggable={false} />
+						<p class="font-mono text-md">Flower + 36</p>
 					</div>
 				</div>
 			</div>
-		</div>
-	</main> -->
-	<!-- <main  class="h-dvh px-4 flex flex-col flex-1 container mx-auto">
+			<div>
+				<div class="h-full flex items-end">
+					<div class="w-full flex flex-col justify-between lg:m-12 lg:flex-row">
+						<div>
+							<h1 class="mb-2">SAE</h1>
+							<h2>APPLYING sparse autoencoders on images</h2>
+						</div>
+						
+						<div class="flex flex-col relative my-12 lg:my-0">
+							<div class="w-32 h-32 overflow-hidden z-10 mb-[-18px]">
+								<Image src={silverchibi} alt="chibi" class="object-cover" />
+							</div>
+							<button class="border-2 border-white px-12 py-4 text-2xl lg:text-4xl rounded-sm font-bold hover:bg-white hover:text-black transition-colors bungee">
+								<a href="/devlog/rambling/steering">READ</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	</div>
+	<!-- <main  class="min-h-dvh px-4 flex flex-col flex-1 container mx-auto">
 		<div class="flex-1 center">
 			<Image src={lenia} alt="" draggable={false} />
 		</div>
@@ -123,18 +161,18 @@ const paths = Object.keys(images);
 				</div>
 				
 				<div class="flex relative items-center flex-col">
-					<div class="w-32 h-32 overflow-hidden z-10 mb-[-24px]">
-						<img src="/devlog/chibi.png" alt="chibi" class="object-cover" />
+					<div class="w-32 h-32 overflow-hidden z-10 mb-[-14px]">
+						<Image src={sleepychibi} alt="chibi" class="object-cover" />
 					</div>
-					<button class="border-2 border-white px-12 py-4 text-4xl rounded font-bold hover:bg-white hover:text-black transition-colors bungee">
+					<button class="border-2 border-white px-12 py-4 text-4xl rounded-sm font-bold hover:bg-white hover:text-black transition-colors bungee">
 						PLAY
 					</button>
 				</div>
 			</div>
 		</div>
-	</main> -->
+	</main>
 
-	<main  class="h-dvh px-4 flex flex-col flex-1 container mx-auto">
+	<main  class="min-h-dvh px-4 flex flex-col flex-1 container mx-auto">
 		<div class="flex-1 center">
 			<Image src={anime} alt="" draggable={false} />
 		</div>
@@ -147,14 +185,14 @@ const paths = Object.keys(images);
 				
 				<div class="flex relative items-center flex-col">
 					<div class="w-32 h-32 overflow-hidden z-10 mb-[-24px]">
-						<img src="/devlog/chibi.png" alt="chibi" class="object-cover" />
+						<Image src={redchibi} alt="chibi" class="object-cover" />
 					</div>
-					<button class="border-2 border-white px-12 py-4 text-4xl rounded font-bold hover:bg-white hover:text-black transition-colors bungee">
+					<button class="border-2 border-white px-12 py-4 text-4xl rounded-sm font-bold hover:bg-white hover:text-black transition-colors bungee">
 						READ
 					</button>
 				</div>
 			</div>
 		</div>
-	</main>
+	</main> -->
 
-</Page>
+</ProjectsPage>
