--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,8 +1,8 @@
 ---
 import ProjectsPage from "@/src/layouts/ProjectsPage.astro"
-import type { ImageMetadata } from "astro";
-import { Image } from "astro:assets";
-import { Krea } from "@/src/blocks/krea.tsx"
+import type { ImageMetadata } from "astro"
+import { Image } from "astro:assets"
+import { Krea } from "@/src/blocks/krea"
 import base from "@/src/images/projects/sae/base.png"
 import bun12 from "@/src/images/projects/sae/bun-12.png"
 import bun24 from "@/src/images/projects/sae/bun-24.png"
